force-app/main/default/objects/PBS_Project__c/PBS_Project__c.object-meta.xml
<CustomObject>
    <description>PBS Project Common Object</description>
    <label>PBS Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PBS Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>