force-app/main/default/objects/PBS_Project__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <inlineHelpText>Primary tenant agency (Agency Bureau code) from ePM</inlineHelpText>
    <label>Agency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>