force-app/main/default/objects/PBS_Project__c/fields/Construction_Substantial_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Substantial_Completion_Date__c</fullName>
    <inlineHelpText>ePM-sourced actual substantial completion date for construction</inlineHelpText>
    <label>Construction Substantial Completion Date</label>
    <type>Date</type>
</CustomField>