force-app/main/default/objects/PBS_Project__c/fields/Contracting_Officer__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Officer__c</fullName>
    <inlineHelpText>Contracting Officer for this project</inlineHelpText>
    <label>Contracting Officer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>