force-app/main/default/objects/PBS_Project__c/fields/Design_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_Award_Date__c</fullName>
    <inlineHelpText>ePM-sourced Design Award Date</inlineHelpText>
    <label>Design Award Date</label>
    <type>Date</type>
</CustomField>