force-app/main/default/objects/PBS_Project__c/fields/Design_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_Completion_Date__c</fullName>
    <inlineHelpText>ePM-sourced Design Completion Date</inlineHelpText>
    <label>Design Completion Date</label>
    <type>Date</type>
</CustomField>