force-app/main/default/objects/PBS_Project__c/fields/numARRARelatedSF__c.field-meta.xml
<CustomField>
    <fullName>numARRARelatedSF__c</fullName>
    <label>ARRA Related SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>