force-app/main/default/objects/PBS_Project__c/fields/numGrossSF__c.field-meta.xml
<CustomField>
    <fullName>numGrossSF__c</fullName>
    <label>Gross SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>