force-app/main/default/objects/PBS_Project__c/fields/numInsideParkingSF__c.field-meta.xml
<CustomField>
    <fullName>numInsideParkingSF__c</fullName>
    <label>Inside Parking SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>