force-app/main/default/objects/PBS_Project__c/fields/numOutsideParkingSpaces__c.field-meta.xml
<CustomField>
    <fullName>numOutsideParkingSpaces__c</fullName>
    <label>Outside Parking Spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>