force-app/main/default/objects/PBS_Project__c/fields/numProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>numProjectNumber__c</fullName>
    <externalId>true</externalId>
    <label>Project Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>