force-app/main/default/objects/PBS_Project__c/fields/numRentableSF__c.field-meta.xml
<CustomField>
    <fullName>numRentableSF__c</fullName>
    <label>Rentable SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>