force-app/main/default/objects/PBS_Project__c/fields/numUsableSF__c.field-meta.xml
<CustomField>
    <fullName>numUsableSF__c</fullName>
    <label>Usable SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>