force-app/main/default/objects/PBS_Project__c/fields/Study_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Award_Date__c</fullName>
    <inlineHelpText>ePM-sourced Study Award Date</inlineHelpText>
    <label>Study Award Date</label>
    <type>Date</type>
</CustomField>