force-app/main/default/objects/PBS_Project__c/fields/Study_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Completion_Date__c</fullName>
    <inlineHelpText>ePM-sourced Study Completion Date</inlineHelpText>
    <label>Study Completion Date</label>
    <type>Date</type>
</CustomField>