force-app/main/default/objects/PBS_Project__c/fields/txtCreatedIn__c.field-meta.xml
<CustomField>
    <fullName>txtCreatedIn__c</fullName>
    <label>Created In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>gBUILD</fullName>
            </value>
            <value>
                <fullName>GPGIS</fullName>
            </value>
            <value>
                <fullName>ePM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>