force-app/main/default/objects/PBS_Project__c/fields/txtCurrentState__c.field-meta.xml
<CustomField>
    <fullName>txtCurrentState__c</fullName>
    <label>Current State [from ePM]</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Formative</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>