force-app/main/default/objects/PBS_Project__c/fields/txtDeliveryMethod_FullCode__c.field-meta.xml
<CustomField>
    <fullName>txtDeliveryMethod_FullCode__c</fullName>
    <label>Delivery Method Full Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IPD</fullName>
            </value>
            <value>
                <fullName>CM/GMP</fullName>
            </value>
            <value>
                <fullName>CMa</fullName>
            </value>
            <value>
                <fullName>CMc</fullName>
            </value>
            <value>
                <fullName>D/B</fullName>
            </value>
            <value>
                <fullName>D/B-B</fullName>
            </value>
            <value>
                <fullName>D-B-B</fullName>
            </value>
            <value>
                <fullName>DT</fullName>
            </value>
            <value>
                <fullName>IDIQ</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>SB</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>FSS</fullName>
            </value>
            <value>
                <fullName>F-T</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>Lease/Construct</fullName>
            </value>
            <value>
                <fullName>TRAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>