force-app/main/default/objects/PBS_Project__c/fields/txtDocGUID__c.field-meta.xml
<CustomField>
    <fullName>txtDocGUID__c</fullName>
    <label>Doc GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>