force-app/main/default/objects/PBS_Project__c/fields/txtLongName__c.field-meta.xml
<CustomField>
    <fullName>txtLongName__c</fullName>
    <label>Project Long Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>