force-app/main/default/objects/PBS_Project__c/fields/txtProcurementStrategy_FullCode__c.field-meta.xml
<CustomField>
    <fullName>txtProcurementStrategy_FullCode__c</fullName>
    <label>Procurement Strategy Full Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D/B</fullName>
            </value>
            <value>
                <fullName>D-B-B</fullName>
            </value>
            <value>
                <fullName>IDIQ</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>