force-app/main/default/objects/PBS_Project__c/fields/txtProgram__c.field-meta.xml
<CustomField>
    <fullName>txtProgram__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LPOE Special Programs Office Program</fullName>
            </value>
            <value>
                <fullName>Region 01 - New England Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 01 - New England Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Region 02 - Northeast and Caribbean Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 02 - Northeast and Caribbean Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Region 03 - Mid-Atlantic Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 03 - Mid-Atlantic Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Region 04 - Southeast Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 04 - Southeast Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Region 05 - Great Lakes Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 05 - Great Lakes Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Region 06 - Heartland Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 06 - Heartland Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Region 07 - Greater Southwest Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 07 - Greater Southwest Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Region 08 - Rocky Mountain Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 08 - Rocky Mountain Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Region 09 - Pacific Rim Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 09 - Pacific Rim Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Region 10 - Northwest / Arctic Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 10 - Northwest / Arctic Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Region 11 - National Capital Region Capital Project Program</fullName>
            </value>
            <value>
                <fullName>Region 11 - National Capital Region Small Project Program</fullName>
            </value>
            <value>
                <fullName>Central Office Soft Projects Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>