force-app/main/default/objects/PBS_Project__c/fields/txtProgramArea_FullCode__c.field-meta.xml
<CustomField>
    <fullName>txtProgramArea_FullCode__c</fullName>
    <label>Program Area Full Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARRA</fullName>
            </value>
            <value>
                <fullName>ARRA.BS</fullName>
            </value>
            <value>
                <fullName>ARRA.CT</fullName>
            </value>
            <value>
                <fullName>ARRA.FBM</fullName>
            </value>
            <value>
                <fullName>ARRA.FBM1</fullName>
            </value>
            <value>
                <fullName>ARRA.NP</fullName>
            </value>
            <value>
                <fullName>ARRA.O</fullName>
            </value>
            <value>
                <fullName>NONARRA</fullName>
            </value>
            <value>
                <fullName>NONARRA.BS</fullName>
            </value>
            <value>
                <fullName>NONARRA.CT</fullName>
            </value>
            <value>
                <fullName>NONARRA.ED</fullName>
            </value>
            <value>
                <fullName>NONARRA.FBM</fullName>
            </value>
            <value>
                <fullName>NONARRA.NP</fullName>
            </value>
            <value>
                <fullName>NONARRA.O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>