force-app/main/default/objects/PBS_Project__c/fields/txtProjectDescription__c.field-meta.xml
<CustomField>
    <fullName>txtProjectDescription__c</fullName>
    <label>Scope / Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>