force-app/main/default/objects/PBS_Project__c/fields/txtProjectManager__c.field-meta.xml
<CustomField>
    <fullName>txtProjectManager__c</fullName>
    <label>Project Manager</label>
    <length>80</length>
    <type>Text</type>
</CustomField>