force-app/main/default/objects/PBS_Project__c/fields/txtProjectSubtype1_FullCode__c.field-meta.xml
<CustomField>
    <fullName>txtProjectSubtype1_FullCode__c</fullName>
    <label>Project Subtype 1 Full Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>L.LE</fullName>
            </value>
            <value>
                <fullName>L.N</fullName>
            </value>
            <value>
                <fullName>L.R</fullName>
            </value>
            <value>
                <fullName>L.S</fullName>
            </value>
            <value>
                <fullName>L.SP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>