force-app/main/default/objects/PBS_Project__c/fields/txtProlianceAccountName__c.field-meta.xml
<CustomField>
    <fullName>txtProlianceAccountName__c</fullName>
    <label>Proliance Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>