force-app/main/default/objects/PBS_Project__c/fields/txtShortName__c.field-meta.xml
<CustomField>
    <fullName>txtShortName__c</fullName>
    <label>Project Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>